# everythingrl

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  build-all.sh  build_wasm.sh  centos_pre_build.sh  changelog.md  devenv.nix  flake.nix  package-zips.sh  wasm-bindgen-macroquad  windows_pre_build.sh
.cargo/: cc-wrapper.sh  config.toml
rogue-algebra/: Cargo.toml  flake.nix
rogue-algebra/src/: fov.rs  lib.rs  path.rs
server/: .gitignore  Pipfile  ai.py  ai_test.py  app.py  game_types.py  main.py  pyproject.toml  test_ai.py  test_google_cloud.py  web.py
server/data/: alien_areas.json  cyberpunk.json  cyberpunk_actions.json  hk.txt  hk_areas.json  hk_boss.json  hk_characters.json  hk_items.json  hk_monsters.json  nethack_areas.json  pirates.json
server/schemas/: monster.json
server/v0/: __init__.py  ai.py  app.py
server/v1/: ai.py  app.py
server/v1/data/: alien.txt  hk_items.json  nethack.txt  nethack_areas.json  nethack_monsters.json
src/: chargen.rs  fov.rs  grid.rs  intro.rs  main.rs  main_menu.rs  map_gen.rs  net.rs  ratelimit.rs  render.rs  save.rs  util.rs  wasm.rs  world.rs
