[package]
name = "seven-drl-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.7.3"
indexmap = "2.2.3"
lazy_static = "1.4.0"
macroquad = "0.4.4"
egui-macroquad = { git = "https://github.com/optozorax/egui-macroquad.git" }
egui = "0.25.0"
egui_extras = "0.25"
rand = { version = "0.8", default-features=false, features=["small_rng"] }
textwrap = "0.16.1"
reqwest = { version = "0.11.24", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
