[package]
name = "seven-drl-2024"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true

[dependencies]
enum-map = "2.7.3"
indexmap = "2.2.3"
lazy_static = "1.4.0"
macroquad = "0.4.4"
egui-macroquad = { git = "https://github.com/optozorax/egui-macroquad.git" }
egui = "0.25.0"
egui_extras = "0.25"
rand = { version = "0.8", default-features=false, features=["small_rng"] }
textwrap = "0.16.1"
reqwest = { version = "0.11.24", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sapp-jsutils = "0.1.5"
mapgen = "0.6.0"
line_drawing = "1.0.0"
quad-url = "0.1.0"