[workspace]
members = ["rogue-algebra"]

[package]
name = "everythingrl"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true

[dependencies]
enum-map = "2.7.3"
indexmap = "2.2.3"
lazy_static = "1.4.0"
macroquad = "0.4.4"
egui-macroquad = { git = "https://github.com/optozorax/egui-macroquad.git" }
egui = "0.31.1"
egui_extras = "0.31"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
textwrap = "0.16.1"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls", "json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sapp-jsutils = "0.1.5"
mapgen = "0.6.0"
line_drawing = "1.0.0"
quad-url = "0.1.0"
rand_distr = "0.4.3"
noise = "0.9.0"
quad-storage = "0.1.3"
chrono = "0.4.38"
rfd = "0.15.1"
web-time = "1.1.0"
async-std = "1.13.0"
once_cell = "1.20.2"
rogue-algebra = { version = "0.1.0", path = "rogue-algebra" }

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "Window",
    "Location",
] }
js-sys = "0.3.72"
wasm-bindgen-futures = "0.4.45"

[target.'cfg(target_family="wasm")'.dependencies.gloo-timers]
version = "0.3.0"
features = ["futures"]

[target.'cfg(not(target_family="wasm"))'.dependencies]
smol = "2.0.2"
async-compat = "0.2.4"
